--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^10.7.2",
     "fuse.js": "^7.0.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.3",
